k8s/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: realworld
  labels:
    app: api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: api-deploy
    spec:
      containers:
        - name: api-pod
          image: localhost:32000/fastapi-realword-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          command:
            - "uvicorn"
            - "main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8000"
            - "--root-path"
            - "/realworld/api"
          ports:
            - containerPort: 8000
