k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deploy
  namespace: realworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: fastapi-deploy
    spec:
      containers:
      - name: fastapi-deploy
        image: localhost:32000/fastapi-realword-api:latest  # microk8s register
        # imagePullPolicy: Never
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        command: 
          - "gunicorn"
          - "--workers"
          - "3"
          - "--worker-class"
          - "uvicorn.workers.UvicornWorker"
          - "--bind"
          - "0.0.0.0:80"
          - "server.api:app"
        ports:
          - containerPort: 80
