k8s/api/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deploy
  namespace: realworld
  labels:
    app: fastapi-deploy  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: fastapi-deploy
    spec:
      containers:
      - name: fastapi-pod
        image: localhost:32000/fastapi-realword-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        command: 
        - "uvicorn"
        - "app.api:app"        
        - "--workers"
        - "3"
        - "--host"
        - "0.0.0.0"
        - "--port"
        - "80"
        - "--root-path" 
        - "/realworld/api"
        ports:
        - containerPort: 80
