k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: realworld
  labels:
    app: api-service
spec:
  type: ClusterIP
  selector:
    app: api-deploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
