k8s/api/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: realworld
  labels:
    app: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-deploy
  ports:
  - port: 4000
    targetPort: 80
