k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-api
  namespace: realworld
spec:
  type: ClusterIP
  selector:
    app: fastapi-deploy
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 80
