k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: realworld
spec:
  rules:
  - http:
      paths:
      - path: /realworld/api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8080
